--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
     <!-- Information Sections -->
     <section class="container mx-auto mt-10 space-y-8">
         <div id="weapon" class="bg-transparent p-6 shadow-md flex flex-col md:flex-row m-4 rounded-lg">
-            <img src="https://qph.cf2.quoracdn.net/main-qimg-c08bff3fc289af83da2cc7305b27393a-lq" class=" w-full md:w-1/3 drop-shadow-lg" alt="Weapon">
+            <img src="../static/utils/Crossed Swords Clipart PNG Images, Crossed Swords E Sports Logo, Symbol, Design, Illustration PNG Image For Free Download.jpeg" class=" w-full md:w-1/3 drop-shadow-lg" alt="Weapon">
             <div class="p-4">
                 <h2 class="text-3xl font-boldm m-4 ">Ancient Weapons</h2>
                 <p class="p-2 mr-3 text-wrap italic decoration-white">Ancient India was home to a rich arsenal of weapons that played a crucial role in warfare and self-defense. The subcontinent's military advancements included melee weapons such as swords like the Khopesh and the Talwar, which were known for their curved, razor-sharp blades. Spears and lances were also common, used by infantry and cavalry alike. Ranged weapons such as bows, including the legendary Dhanush, enabled archers to attack from a distance, while chakrams—sharp, circular throwing discs—were uniquely Indian. Many weapons were crafted with spiritual and technological significance, often engraved with religious symbols or enhanced through metallurgy techniques that made them more durable and deadly.
