--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
     <!-- Footer -->
     <footer class="bg-blue-900 text-white text-center p-4 mt-10">
         &copy; 2025 IKS Project. All Rights Reserved.
-        @Viraj Gavade
+        @Viraj Gavade @Kartik Shinde
     </footer>
     
     <script src="../static/script.js"></script>
