Pushing to Deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,11 @@
     </div>
 <div id="content" style="display:none;">
     <!-- Navbar -->
-    <nav class="bg-transparent text-white shadow-lg">
+    <nav class="bg-blue-900 text-white shadow-lg">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
-                <a href="#" class="flex items-center space-x-3">
+                <a href="/" class="flex items-center space-x-3">
                     <span class="text-2xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-blue-200">
                         IKS Project
                     </span>
@@ -98,7 +98,8 @@
     <!-- Footer -->
     <footer class="bg-blue-900 text-white text-center p-4 mt-10">
         &copy; 2025 IKS Project. All Rights Reserved.
-        @Viraj Gavade @Kartik Shinde
+       <a href="https://github.com/viraj-gavade">@Viraj Gavade </a>  <br>
+       <a href="https://github.com/CodesByKartik">@Kartik Shinde </a> 
     </footer>
     
     <script src="../static/script.js"></script>
