--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,13 @@ body{
  background-size:cover
 }
 
+@media (max-width: 768px) {
+    #preload-video, .hero-video {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+}
 
 .nav-link {
     position: relative;
