--- a/templates/Engg&Tech.html
+++ b/templates/Engg&Tech.html
@@ -47,7 +47,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
-                <a href="#" class="flex items-center space-x-3">
+                <a href="/" class="flex items-center space-x-3">
                     <span class="text-2xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-blue-200">
                         IKS Project
                     </span>
@@ -229,9 +229,9 @@
     
     <footer class="bg-blue-900 text-white text-center p-4 mt-10">
         &copy; 2025 IKS Project. All Rights Reserved.
-        @Viraj Gavade
+       <a href="https://github.com/viraj-gavade">@Viraj Gavade </a>  <br>
+       <a href="https://github.com/CodesByKartik">@Kartik Shinde </a> 
     </footer>
-    
 <script>   
   
     document.addEventListener("scroll", function () {
